--- a/src/Topxia/WebBundle/Resources/views/Attachment/item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/item.html.twig
@@ -4,7 +4,7 @@
   <span class="pull-right">
   	{% set can_preview_type = attachment.file.type in ['video', 'audio', 'ppt', 'document', 'image', 'flash'] %}
   		
-  	{% set can_preview = attachment.file.type in ['video', 'ppt', 'document'] and attachment.file.processStatus == "ok" %}
+  	{% set can_preview = attachment.file.type in ['video', 'ppt', 'document'] and attachment.file.processStatus|default(null) == "ok" %}
     {% if can_preview_type and (not can_preview) %}
        {% set can_preview = attachment.file.type in ['audio', 'image', 'flash'] %}    
     {% endif %}
