--- a/src/Topxia/AdminBundle/Resources/views/CloudAttachment/Form/type.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudAttachment/Form/type.html.twig
@@ -7,5 +7,5 @@
   <li class="js-useType-btn " data-value="classroom"><a class="item" href="javascript:;">班级讨论区</a></li>
   <li class="js-useType-btn " data-value="article"><a class="item" href="javascript:;">资讯</a></li>
   <input type="hidden" name="useType" value="{{ useType|default('') }}">
-  <input type="hidden" name="targetType" value="attachment">
+  <input type="hidden" name="resType" value="attachment">
 </ul>
