--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -57,7 +57,7 @@
                              <label>
                                  <input type="checkbox" name="classroom"
                                         value="1" {% if attachment.classroom %} checked {% endif %}>
-                                 班级讨论区
+                                 班级话题
                              </label>
                              <label>
                                  <input type="checkbox" name="group"
