--- a/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
@@ -96,7 +96,6 @@
     }
     .balloon-filelist .file-manage {
       display: inline-block;
-      width: 20%;
       z-index: 9999;
       position: absolute;
     }
@@ -179,7 +178,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      right: -40px;
+      right: 0;
       bottom: 0;
     }
 
