--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/table-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/table-tr.html.twig
@@ -95,5 +95,7 @@
       小组
     {% elseif useType in ['question.stem', 'question.analysis'] %}
       试题
+    {% else %}
+      --
     {% endif %}
 {% endmacro %}
