--- a/src/Topxia/AdminBundle/Resources/views/System/default-course-picture-crop.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/default-course-picture-crop.html.twig
@@ -19,7 +19,7 @@
           <img class="img-responsive"src="{{ filepath(pictureUrl) }}" 
           id="default-course-picture-crop" 
           width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" />
-          <div class="help-block">提示：12312312321请选择图片裁剪区域。</div>
+          <div class="help-block">提示：请选择图片裁剪区域。</div>
         </div>
       </div>
 
