--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -7,7 +7,7 @@
   
   <div class="form-group">
     {% if showLabel|default(false) %}
-      <label class="col-xs-2 control-label" for="thread_title">{{ '附件'|trans }}</label>
+      <label class="col-xs-2 control-label" for="thread_title">{% if targetType == 'question.stem' %}{{ '题干附件'|trans }}{% elseif targetType == 'question.analysis' %}{{ '解析附件'|trans }}{% else %}{{ '附件'|trans }}{% endif %}</label>
       <div class="col-xs-7 controls">
     {% else %}
       <div class="controls"> 
