--- a/web/themes/autumn/TopxiaWebBundle/views/Default/index.html.twig
+++ b/web/themes/autumn/TopxiaWebBundle/views/Default/index.html.twig
@@ -181,7 +181,7 @@
               {% if article %}
                 <li class="col-md-6">
                   <em>{{ article.publishedTime|date('m-d H:i') }} </em>
-                  <a href="{{ path('article_detail', {id:article.id}) }}" title="{{ article.title }}"> <span>[{{ article.category.name }}]</span>{{ article.title }} </a>
+                  <a href="{{ path('article_detail', {id:article.id}) }}" title="{{ article.title }}"> {% if article.categoryId %}<span>[{{ article.category.name }}]</span>{% endif %}{{ article.title }} </a>
                 </li>
               {% endif %}
             {% endfor %}
