--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/table-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/table-tr.html.twig
@@ -90,7 +90,7 @@
     {% elseif useType in ['course.thread','course.thread.post'] %}
       课程讨论区
     {% elseif  useType in ['classroom.thread','classroom.thread.post'] %}
-      班级讨论区
+      班级话题
     {% elseif useType in ['group.thread', 'group.thread.post'] %}
       小组
     {% elseif useType in ['question.stem', 'question.analysis'] %}
