--- a/src/Topxia/AdminBundle/Resources/views/CloudAttachment/Form/type.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudAttachment/Form/type.html.twig
@@ -4,7 +4,7 @@
   <li class="js-useType-btn " data-value="group"><a class="item" href="javascript:;">小组</a></li>
   <li class="js-useType-btn " data-value="question"><a class="item" href="javascript:;">试题</a></li>
   <li class="js-useType-btn " data-value="course"><a class="item" href="javascript:;">课程讨论区</a></li>
-  <li class="js-useType-btn " data-value="classroom"><a class="item" href="javascript:;">班级讨论区</a></li>
+  <li class="js-useType-btn " data-value="classroom"><a class="item" href="javascript:;">班级话题</a></li>
   <li class="js-useType-btn " data-value="article"><a class="item" href="javascript:;">资讯</a></li>
   <input type="hidden" name="useType" value="{{ useType|default('') }}">
   <input type="hidden" name="resType" value="attachment">
