--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -28,40 +28,22 @@
         <input type="hidden" name="targetType" value="{{order.targetType}}">
         <input type="hidden" name="orderId" value="{{order.id}}"/>
         
-        {% set activePayment = order.payment %}
-        {% set cbpay = false %}
-        {% set alipay = false %}
-        {% set other = false %}
-        {% for payment,options in payments %}
-          {% if ( not is_micro_messenger() and activePayment == 'none' ) 
-            or (is_micro_messenger() and activePayment in ['none', 'alipay'] and not (payment == 'alipay')) %}
-            {% set activePayment = payment %}
-          {% endif %}
-          {% if isMobile and payment == 'heepay' or isMobile and payment ==  'llcbpay' %}
-            {% set cbpay = true %}
-          {% elseif payment == 'alipay' and  is_micro_messenger() %}
-            {% set alipay = true %}
-          {% else %}
-            {% set other = true %}
-          {% endif %}
-        {% endfor %}
+        {% set activePayment = order.payment|default(firstEnabledPayment.name|default('')) %}
+        {% if order.payment == 'none' %}
+          {% set activePayment = firstEnabledPayment.name|default('') %}
+        {% endif %}
+
         <input type="hidden" name="payment" value={{activePayment}}>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
+
+
         <div class="form-group order-detail-bg">
-          {% for payment, options in payments %}
-            {% if payment == 'alipay' and is_micro_messenger() %}
-            <div class="check disabled">
-              {% set picture = 'assets/img/order/'~payment~'.png' %}
-              <img src="{{ asset(picture) }}" />
-              <span class="icon"></span>
-            </div>
-            {% else %}
-            <div class="check{% if payment == activePayment %} active {% endif %} {% if isMobile and payment == 'heepay' or isMobile and payment ==  'llcbpay' %}disabled{% endif %}" id="{{payment}}">
-              {% set picture = 'assets/img/order/'~payment~'.png' %}
-              <img src="{{ asset(picture) }}" />
-              <span class="icon"></span>
-            </div>
-            {% endif %}
+          {% for payment in payments %}
+              <div class="check {% if not payment.enabled %}disabled{% endif %} {% if activePayment == payment.name %}active{% endif %}">
+                {% set picture = 'assets/img/order/'~payment.name~'.png' %}
+                <img src="{{ asset(picture) }}" />
+                <span class="icon"></span>
+              </div>
           {% else %}
             <div class="pay-type-label text-warning ">{{'支付方式未开启，请联系管理员。'|trans}}</div>
           {% endfor %}
@@ -102,8 +84,9 @@
           {% if targetType in ['course', 'classroom', 'vip'] %}
             {% include 'TopxiaWebBundle:PayCenter:' ~ targetType ~ '-cancelled.html.twig' %}
           {% endif %}
-          <button class="pay-button btn btn-primary"  {% if  other is sameas(false) %}disabled="disabled"{% else %}type="submit"{% endif %} >{{'确认支付'|trans}}</button>
+          <button class="pay-button btn btn-primary" {% if  activePayment == '' %}disabled="disabled"{% else %}type="submit"{% endif %} >{{'确认支付'|trans}}</button>
         </div>
+
       </form>
     </div>
   </div>
