--- a/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/keyword-add.html.twig
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/keyword-add.html.twig
@@ -17,7 +17,7 @@
         <label for="keyword-name-field">{{'敏感词类型'|trans}}</label>
       </div>
       <div class="col-md-7 controls radios">
-        <input type="radio" id="replaced" name="state" class="state" value="replaced" checked="checked" data-text="{{'选择屏蔽，会将指定敏感词替换为'*'。'|trans}}">
+        <input type="radio" id="replaced" name="state" class="state" value="replaced" checked="checked" data-text="{{'选择屏蔽，会将指定敏感词替换为"*"。'|trans}}">
         <label for="replaced">{{'屏蔽'|trans}}</label>
         <input type="radio" id="banned" name="state" calss="state" value="banned" data-text="{{'选择禁用，将无法保存。'|trans}}">
         <label for="banned">{{'禁用'|trans}}</label>
