--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/Form/filter.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/Form/filter.html.twig
@@ -14,7 +14,7 @@
         <option value="error">转码失败</option>
       </select>
     </div>
-    {% if pageType == 'attachment' %}
+    {% if pageType == 'file' %}
       <div class="form-group" >
         <select class="form-control js-use-status-select" name="useStatus">
           <option value="">使用状态</option>
