--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/llquickpay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/llquickpay.html.twig
@@ -8,7 +8,7 @@
       {{ radios('llquickpay_enabled', {1:'开启', 0:'关闭'}, payment.llquickpay_enabled) }}
     </div>
      <div class="controls col-md-4 radios">
-        <a href="http://www.edusoho.com/files/llpay.zip">下载接口申请说明文档</a>
+        <a href="http://www.edusoho.com/files/lianlianpay.zip">下载接口申请说明文档</a>
       </div>
   </div>
 
