--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -35,10 +35,16 @@
 
         <input type="hidden" name="payment" value={{activePayment}}>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
-
+        {% set cbpay = false %}
+        {% set alipay = false %}
 
         <div class="form-group order-detail-bg">
           {% for payment in payments %}
+           {% if payment.name == 'heepay' and  payment.enabled == 0  or payment.name ==  'llcbpay' and payment.enabled == 0 %}
+           {% set cbpay = true %}
+           {% elseif  payment.name == 'alipay' and payment.enabled == 0 %}
+           {% set alipay = true %}
+            {% endif %}
               <div class="check {% if not payment.enabled %}disabled{% endif %} {% if activePayment == payment.name %}active{% endif %}">
                 {% set picture = 'assets/img/order/'~payment.name~'.png' %}
                 <img src="{{ asset(picture) }}" />
