--- a/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/upload-modal.html.twig
@@ -226,7 +226,7 @@
   {% if setting('storage.upload_mode', 'local') == 'cloud'  %}
     <div class="alert alert-info">
       <ul>
-        <li>支持PPT/PPTX,DOC/DOCX,XLS/XLSX，MP3/MP4/FLV、PDF、RAR格式的文件上传，单个文件大小不能超过<strong>{{setting('cloud_attachment.fileSize')}}MB</strong>。</li>
+        <li>支持PPT/PPTX,DOC/DOCX,XLS/XLSX、MP3/MP4/FLV、PDF、RAR格式的文件上传，单个文件大小不能超过<strong>{{setting('cloud_attachment.fileSize')}}MB</strong>。</li>
         <li>支持<strong>断点续传</strong>（仅支持HTML5浏览器）。</li>
       </ul>
     </div>
