--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -40,11 +40,14 @@
 
         <div class="form-group order-detail-bg">
           {% for payment in payments %}
-           {% if payment.name == 'heepay' and  payment.enabled == 0  or payment.name ==  'llcbpay' and payment.enabled == 0 %}
-           {% set cbpay = true %}
-           {% elseif  payment.name == 'alipay' and payment.enabled == 0 %}
-           {% set alipay = true %}
+            {% if payment.name == 'heepay' and  payment.enabled == 0  or payment.name ==  'llcbpay' and payment.enabled == 0 %}
+              {% set cbpay = true %}
+            {% elseif  payment.name == 'alipay' and payment.enabled == 0 %}
+              {% set alipay = true %}
             {% endif %}
+              {% if activePayment == 'none' or activePayment == '' %}
+                {% set activePayment = payment.name %}
+              {% endif %}
               <div class="check {% if not payment.enabled %}disabled{% endif %} {% if activePayment == payment.name %}active{% endif %}" id="{{payment.name}}">
                 {% set picture = 'assets/img/order/'~payment.name~'.png' %}
                 <img src="{{ asset(picture) }}" />
