--- a/web/assets/v2/less/main-en-us.less
+++ b/web/assets/v2/less/main-en-us.less
@@ -138,3 +138,14 @@
     }
   }
 }
+
+.class-header {
+  .class-serve {
+    .serve-frame {
+      width: 50px;
+    }
+    >ul {
+      padding: 25px 10px 25px 60px
+    }
+  }
+}
