--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/index.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'ClassroomBundle:ClassroomManage:layout.html.twig' %}
 
-{% block title %}{{ setting('classroom.name')|default("班级") }}{{'管理'|trans}} - {{ parent() }}{% endblock %}
+{% block title %}{{ setting('classroom.name')|default("班级"|trans) }}{{'管理'|trans}} - {{ parent() }}{% endblock %}
 
 {% set side_nav = 'main' %}
 {% set script_controller = 'classroombundle/controller/classroom/index' %}
