--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/students.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/students.html.twig
@@ -38,7 +38,7 @@
       </li>
 
       <li class="{% if submenu == 'record' %}active{% endif %}">
-        <a href="{{ path('classroom_manage_record', {id:classroom.id}) }}">退出记录
+        <a href="{{ path('classroom_manage_record', {id:classroom.id}) }}">{{ '退出记录'|trans }}
         </a>
       </li>
     </ul>
