--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-essay.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-essay.html.twig
@@ -80,7 +80,7 @@
 			</div>
 			<div class="testpaper-question-analysis well" style="display:none;">
 				{{ item.question.analysis|bbCode2Html|raw|nl2br }}
-				{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+				{% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.analysis', targetId:item.question.id  } %}
 			</div>
 		{% endif %}
 
@@ -112,7 +112,7 @@
 	  </div>
 	  <div class="testpaper-question-analysis well">
 	  	{{ item.question.analysis|default('无解析')|bbCode2Html|raw|nl2br }}
-	  	{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+	  	{% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.analysis', targetId:item.question.id  } %}
 	  </div>
 	  {% endif %}
 
