--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-material.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-material.html.twig
@@ -1,7 +1,7 @@
 <div class="material">
 <div class="well testpaper-question-stem-material">
 	{{ item.question.stem|fill_question_stem_html|bbCode2Html|raw }}
-	{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.stem', targetId: item.question.id })) }}
+	{% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.stem', targetId:item.question.id  } %}
 </div>
 {% for item in item.items|default([]) %}
 
