--- a/src/Topxia/WebBundle/Resources/views/Question/question-choice-finished.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Question/question-choice-finished.html.twig
@@ -5,7 +5,7 @@
   {% elseif question.type == 'choice' %}{{'（多选）'|trans}}
   {% endif %}
   {{ question.stem|bbCode2Html|raw }}
-  {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.stem', targetId: question.id })) }}
+  {% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.stem', targetId:question.id  } %}
 {% endblock %}
 
 {% block body %}
