--- a/src/Topxia/WebBundle/Resources/views/Question/question-material-finished.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Question/question-material-finished.html.twig
@@ -3,7 +3,7 @@
 {% block heading %}
   <div class="well well-sm">
   {{ question.stem|bbCode2Html|raw }}
-  {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.stem', targetId: question.id })) }}
+{% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.stem', targetId:question.id  } %}
   </div>
 {% endblock %}
 
