--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-fill.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test-fill.html.twig
@@ -42,7 +42,7 @@
 		</div>
 		<div class="testpaper-question-analysis well" style="display:none;">
 			{{ item.question.analysis|bbCode2Html|raw|nl2br }}
-			{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+			{% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.analysis', targetId:item.question.id  } %}
 		</div>
 	{% else %}
 	  <div class="testpaper-question-footer clearfix">
@@ -73,7 +73,7 @@
 	  </div>
 	  <div class="testpaper-question-analysis well">
 	  	{{ item.question.analysis|default('无解析'|trans)|bbCode2Html|raw|nl2br }}
-		{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.analysis', targetId: item.question.id })) }}
+		{% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'question.analysis', targetId:item.question.id  } %}
 	  </div>
 	  {% endif %}
 
