封装附件列表

--- a/src/Topxia/WebBundle/Resources/views/Article/detail.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Article/detail.html.twig
@@ -22,7 +22,7 @@
         
         {% include 'TopxiaWebBundle:Article/Part:detail-boy.html.twig' %}
 
-        {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'article', targetId: article.id })) }}
+        {% include 'TopxiaWebBundle:Attachment/Widget:list.html.twig' with {targetType:'article', targetId:article.id} %}
 
         {% include 'TopxiaWebBundle:Article/Part:detail-copyright.html.twig' %}
 
