--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/lesson-play.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/lesson-play.html.twig
@@ -19,3 +19,15 @@
   </div>
 </div>
 
+<div class="mask" {% if lesson %}style="display:none"{% endif %} id="media-error-dialog">
+  <div class="modal-dialog" style="width:230px;margin:22% auto;">
+    <div class="modal-content">
+
+      <div class="modal-body clearfix">
+        <i class="es-icon es-icon-info" style="font-size: 22px;"></i>
+        <span class="media-error">{% if not lesson %}视频编辑中，请稍后再试{% else %}该课时资源文件被删除{% endif %}</span>
+      </div>
+    </div>
+  </div>
+</div>
+
