change the mobile-pic and reset the pic size

--- a/src/Topxia/WebBundle/Resources/views/Mobile/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Mobile/index.html.twig
@@ -15,7 +15,7 @@
           {% if setting('mobile.appcover') %}
           <img class="img-two-content" src="{{asset(setting('mobile.appcover'))}}" alt="">
           {% else %}
-          <img class="img-two-content" src="{{asset("assets/v2/img/mobile/phone_white_content.jpg")}}" alt="">
+          <img class="img-two-content" src="{{asset("assets/v2/img/mobile/phone_white_content.png")}}" alt="">
           {% endif %}
         </div>
         <div class="mobile-content">
