--- a/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
@@ -1,32 +1,46 @@
 <div class="course-item clearfix">
-    <div class="course-img">
-      <a href="{{path('course_show',{id : course.courseId}) }}" target="_blank"><img class="img-responsive" src="{{ filepath(course.middlePicture, 'course.png') }}" alt=""></a>
+  {% set is_open_course = course.type|sub_str(0, 7) == 'public' %}
+
+  {% if is_open_course %}
+    {% set course_show_url = path('open_course_show', { courseId: course.id }) %}
+  {% else %}
+    {% set course_show_url = path('course_show',{id : course.courseId}) %}
+  {% endif %}
+
+  <div class="course-img">
+    <a href="{{ course_show_url }}" target="_blank">
+      <img class="img-responsive" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="">
+    </a>
+  </div>
+  <div class="course-info">
+    <h3 class="title">
+      <a href="{{ course_show_url }}" target="_blank">
+        {{ course.title|raw }}
+        {% if course.learning|default(false) %}
+          <small class="label label-primary label-xs">{{ '正在学'|trans }}</small>
+        {% endif %}
+      </a>
+    </h3>
+    <div class="score">
+      {{ web_macro.star(course.rating|default(0)) }}
+      {% if is_open_course %}
+        <span>{{ course.studentNum|default(0) }}{{ '人学习'|trans }}</span>
+      {% else %}
+        <span>{{ course.ratingNum|default(0) }}人评价({{ course.studentNum|default(0) }}{{ '人学习'|trans }})</span>
+      {% endif %}
     </div>
-    <div class="course-info">
-      <h3 class="title">
-        <a href="{{path('course_show',{id : course.courseId}) }}" target="_blank">
-          {{course.title|raw}}
-          {% if course.learning %}
-            <small class="label label-primary label-xs">{{'正在学'|trans}}</small>
-          {% endif %}
-        </a>
-      </h3>
-      <div class="score">
-        {{ web_macro.star(course.rating|default(0)) }}
-        <span>{{ course.ratingNum|default(0) }}人评价({{ course.studentNum|default(0)}}{{'人学习'|trans}})</span>
-      </div>
-      <div class="content">{{course.about|raw}}</div>
-      {% if course.lessons|default(null) %}
-        <ul class="ul-lesson">
-        {% for lesson in course.lessons|slice(0, 3)%}
+    <div class="content">{{ course.about|raw }}</div>
+    {% if course.lessons|default(null) %}
+      <ul class="ul-lesson">
+        {% for lesson in course.lessons|slice(0, 3) %}
           <li>
             <i class="es-icon es-icon-arrowdropleft"></i>
-            <a class="link-light" href="{{path('course_show',{id : course.courseId}) }}" target="_blank">
-              课时 {{lesson.number}}: {{lesson.title|raw}}
+            <a class="link-light" href="{{ course_show_url }}" target="_blank">
+              课时 {{ lesson.number }}: {{ lesson.title|raw }}
             </a>
           </li>
         {% endfor %}
-        </ul>
-      {% endif %}
-    </div>
+      </ul>
+    {% endif %}
   </div>
+</div>
