--- a/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
@@ -9,6 +9,9 @@
 
   <div class="course-img">
     <a href="{{ course_show_url }}" target="_blank">
+      <span class="tags">
+        <span class="tag-live"></span>
+      </span>
       <img class="img-responsive" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="">
     </a>
   </div>
