--- a/web/assets/v2/css/main-orange.css
+++ b/web/assets/v2/css/main-orange.css
@@ -11121,6 +11121,13 @@ textarea {
   left: 0px;
   top: 0px;
 }
+.search-course-list .course-item .course-img .tags .tag-live {
+  display: inline-block;
+  width: 40px;
+  height: 50px;
+  background: url("../img/tag_live.png") no-repeat;
+  background-image: -webkit-image-set(url("../img/tag_live.png") 1x, url("../img/tag_live@2x.png") 2x);
+}
 .search-course-list .course-item .course-info {
   float: left;
   width: 65%;
