--- a/web/assets/v2/less/page/search.less
+++ b/web/assets/v2/less/page/search.less
@@ -102,6 +102,13 @@
         position: absolute;
         left: 0px;
         top: 0px;
+        .tag-live{
+          display: inline-block;
+          width: 40px;
+          height: 50px;
+          background: url("@{img-src}tag_live.png") no-repeat;
+          background-image: -webkit-image-set(url("@{img-src}tag_live.png") 1x,url("@{img-src}tag_live@2x.png") 2x);
+        }
       }
     }
     .course-info {
