--- a/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Search/search-course-item.html.twig
@@ -9,8 +9,11 @@
 
   <div class="course-img">
     <a href="{{ course_show_url }}" target="_blank">
-      <span class="tags">
+      <span class="tags-left">
         <span class="tag-live"></span>
+      </span>
+      <span class="tags-right">
+        <span class="tag-public"></span>
       </span>
       <img class="img-responsive" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="">
     </a>
