--- a/web/assets/v2/css/main-blue-light.css
+++ b/web/assets/v2/css/main-blue-light.css
@@ -11116,17 +11116,29 @@ textarea {
     float: none;
   }
 }
-.search-course-list .course-item .course-img .tags {
+.search-course-list .course-item .course-img .tags-left {
   position: absolute;
   left: 0px;
   top: 0px;
 }
-.search-course-list .course-item .course-img .tags .tag-live {
+.search-course-list .course-item .course-img .tags-left .tag-live {
   display: inline-block;
   width: 40px;
   height: 50px;
   background: url("../img/tag_live.png") no-repeat;
   background-image: -webkit-image-set(url("../img/tag_live.png") 1x, url("../img/tag_live@2x.png") 2x);
+}
+.search-course-list .course-item .course-img .tags-right {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+.search-course-list .course-item .course-img .tags-right .tag-public {
+  display: inline-block;
+  width: 68px;
+  height: 68px;
+  background: url("../img/tag_public.png") no-repeat;
+  background-image: -webkit-image-set(url("../img/tag_public.png") 1x, url("../img/tag_public@2x.png") 2x);
 }
 .search-course-list .course-item .course-info {
   float: left;
