--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/alipay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/alipay.html.twig
@@ -38,6 +38,9 @@
     </div>
     <div class="controls col-md-8">
       <input type="text" id="alipay_secret" name="alipay_secret" class="form-control" value="{{payment.alipay_secret}}">
+      <div class="help-block">
+        登录【支付宝商家服务】-【我的商家服务】，<a href="https://b.alipay.com/newIndex.htm" target="_blank">可查看PID和Key</a>。
+      </div>
     </div>
   </div>
   <div class="form-group">
