--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/wxpay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/wxpay.html.twig
@@ -35,6 +35,9 @@
     </div>
     <div class="controls col-md-8">
       <input type="text" id="wxpay_secret" name="wxpay_secret" class="form-control" value="{{payment.wxpay_secret}}">
+      <div class="help-block">
+        商户平台key需要登录<a href="https://pay.weixin.qq.com/service_provider/index.shtml" target="_blank">微信商户平台</a>，在【账户设置】-【API安全】中设置密匙。
+      </div>
     </div>
   </div> 
 </fieldset>
