修改连连支付修改逻辑

--- a/src/Topxia/AdminBundle/Resources/views/System/payment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/payment.html.twig
@@ -31,8 +31,7 @@
   {% include 'TopxiaAdminBundle:System/Pay:wxpay.html.twig'%}
   {% include 'TopxiaAdminBundle:System/Pay:heepay.html.twig'%}
   {% include 'TopxiaAdminBundle:System/Pay:quickly.html.twig'%}
-  {% include 'TopxiaAdminBundle:System/Pay:llcbpay.html.twig'%}
-  {% include 'TopxiaAdminBundle:System/Pay:llquickpay.html.twig'%}
+  {% include 'TopxiaAdminBundle:System/Pay:llpay.html.twig'%}
 
   <div class="form-group">
     <div class="col-md-3 control-label"></div>
